--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,2 +1,26 @@
 a
     text-decoration: none
+
+.button
+    font-family: 'Roboto'
+    text-transform: uppercase
+    font-weight: bold
+    font-size: 16px
+    border-radius: 5px
+    &__primary
+        background-color: rgba(8, 66, 183, 1)
+        color: white
+        border: none
+        padding: 15px 45px
+        box-shadow: 
+    &__secondary
+        background-color: transparent
+        color: rgba(8, 66, 183, 1)
+        border: 1px solid rgba(8, 66, 183, 1)
+        padding: 14px 39px
+.txt
+    font-family: 'Roboto'
+    font-weight: normal
+    &__span
+        &-hero
+            color: #06bee1
