--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -1,8 +1,9 @@
 .hero
     padding-top: 178px
-    padding-bottom: 755px
-    background: url('../img/webp/bg.webp') center no-repeat
+    padding-bottom: 605px
+    background: url('../img/webp/bg.webp') -185px -57px no-repeat 
     &__title
+        margin: 0
         margin-bottom: 8px
         font-family: 'Roboto'
         font-weight: normal
@@ -10,16 +11,32 @@
         align-items: center 
         color: black
         &-mini
+            margin: 0
             font-family: 'Roboto'
-            text-transform: uppercase
             font-weight: normal
-            font-size: 16px
+            font-size: 35px
             align-items: center 
             color: black
-    &____buttonsandtxt
+    &__text
+        max-width: 349px
+        width: 100%
+        margin: 0
+        margin-top: 29px
+        margin-bottom: 65px
+        font-size: 16px
+    &__buttonsandtxt
         display: flex
+        &__button
+            &:first-child
+                margin-bottom: 12px
+        &__txt
+            margin-left: 53px
+            max-width: 350px
+            width: 100%
+            font-size: 25px
     &__buttons
         display: flex
         flex-direction: column
         align-items: center
         justify-content: center
+
