--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -2,3 +2,13 @@
     width: 100%
     max-width: 1140px
     margin: auto
+
+.row
+    display: flex
+    align-items: flex-start
+    justify-content: space-between
+.col
+    &-25
+        flex-basis: 25%
+    &-50
+        flex-basis: 50%
