--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,6 +1,9 @@
 a
     text-decoration: none
-
+.title
+    color: $dark
+    font-family: 'Roboto'
+    font-weight: normal
 .button
     font-family: 'Roboto'
     text-transform: uppercase
@@ -19,8 +22,20 @@ a
         border: 1px solid rgba(8, 66, 183, 1)
         padding: 14px 39px
 .txt
+    color: $dark
     font-family: 'Roboto'
     font-weight: normal
-    &__span
-        &-hero
-            color: #06bee1
+.span
+    color: #06bee1
+    &--bold
+        font-weight: bold
+    &-percent
+        font-size: 112px
+        font-weight: normal
+            
+.strong
+    &__title
+
+        font-size: 35px
+        padding: 19px
+        background-color: white
