--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -16,7 +16,7 @@
     font-weight: bold
     font-size: 16px
     align-items: center 
-    color: black
+    color: $dark
     &__img
         margin-right: 12px
         width: 25px
@@ -35,7 +35,7 @@
             margin-left: 93px
         &:hover    
             text-decoration: none
-            color: black
+            color: $dark
             border-bottom: 3px solid rgba(0, 86, 207, 1)
 
 .phone
@@ -47,6 +47,6 @@
     color: #777777
     &__bold
         font-weight: bold
-        color: black
+        color: $dark
 
         
