--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -5,18 +5,16 @@
     &__title
         margin: 0
         margin-bottom: 8px
-        font-family: 'Roboto'
-        font-weight: normal
         font-size: 70px
         align-items: center 
-        color: black
+        color: $dark
         &-mini
             margin: 0
             font-family: 'Roboto'
             font-weight: normal
             font-size: 35px
             align-items: center 
-            color: black
+            color: $dark
     &__text
         max-width: 349px
         width: 100%
