сделан слайдер и вещь над ним но не сделана форма мне тяжело с ней

--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -1,7 +1,7 @@
 .hero
-    padding-top: 178px
+    padding-top: 230px
     padding-bottom: 605px
-    background: url('../img/webp/bg.webp') -185px -57px no-repeat 
+    background: url('../img/webp/bg.webp') -185px 0 no-repeat 
     &__title
         margin: 0
         margin-bottom: 8px
