--- a/css/style.css
+++ b/css/style.css
@@ -427,10 +427,14 @@ a {
 }
 
 .header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 99;
   padding-bottom: 20px;
   padding-top: 30px;
-  z-index: 10;
-  color: white;
+  background-color: white;
 }
 
 .menu {
@@ -505,9 +509,9 @@ a {
 }
 
 .hero {
-  padding-top: 178px;
+  padding-top: 230px;
   padding-bottom: 605px;
-  background: url("../img/webp/bg.webp") -185px -57px no-repeat;
+  background: url("../img/webp/bg.webp") -185px 0 no-repeat;
 }
 
 .hero__title {
@@ -620,5 +624,161 @@ a {
 
 .gear {
   margin-top: 248px;
+}
+
+.make {
+  margin-top: 111px;
+}
+
+.make__title {
+  margin: 0;
+  margin-bottom: 29px;
+  text-align: center;
+  font-size: 36px;
+  line-height: 42px;
+}
+
+.make__txt {
+  margin: auto;
+  margin-bottom: 64px;
+  text-align: center;
+  max-width: 354px;
+  width: 100%;
+  font-size: 16px;
+}
+
+.make__col-title {
+  max-width: 255px;
+  width: 100%;
+  margin: 0;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.make__col-txt {
+  max-width: 176px;
+  width: 100%;
+}
+
+.make__number__label {
+  max-width: 197px;
+  width: 100%;
+  font-size: 16px;
+}
+
+.make__number__input {
+  max-width: 55px;
+  width: 100%;
+  max-height: 48px;
+  height: 100%;
+}
+
+.learn {
+  padding-top: 127px;
+  padding-bottom: 119px;
+  background: url("../img/webp/bg_learn.webp") center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.learn__title {
+  text-align: center;
+  margin: 0;
+  max-width: 421px;
+  width: 100%;
+  font-size: 23px;
+  line-height: 1.2;
+  font-weight: bold;
+  color: white;
+}
+
+.learn__button {
+  margin-top: 35px;
+  border: 1px solid white;
+  color: white;
+}
+
+.profit {
+  background: url("../img/webp/phone.webp") center;
+  padding-top: 123px;
+  padding-bottom: 130px;
+}
+
+.profit__title {
+  font-size: 35px;
+  margin: 0;
+  max-width: 462px;
+  width: 100%;
+  text-align: center;
+  margin: auto;
+  margin-bottom: 296px;
+}
+
+.profit__slider-inside {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.profit__slider-img {
+  margin-bottom: 53px;
+}
+
+.profit__slider-title {
+  font-size: 25px;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.profit__slider-txt {
+  margin: 0;
+  max-width: 157px;
+  width: 100%;
+  text-align: center;
+}
+
+.swiper-button-prev {
+  background: url("../img/webp/prev.webp") center no-repeat;
+  width: 52px;
+  height: 16px;
+  left: 590px;
+  top: 150px;
+}
+
+.swiper-button-prev::after {
+  display: none;
+}
+
+.swiper-button-next {
+  background: url("../img/webp/next.webp") center no-repeat;
+  width: 52px;
+  height: 16px;
+  left: 1262px;
+  top: 150px;
+}
+
+.swiper-button-next::after {
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
