--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,3 +6,6 @@
 @import 'templates/header'
 @import 'templates/hero'
 @import 'templates/info'
+@import 'templates/make'
+@import 'templates/learn'
+@import 'templates/phone'
