--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -1,8 +1,12 @@
 .header
+    position: fixed
+    left: 0
+    top: 0
+    width: 100%
+    z-index: 99
     padding-bottom: 20px
     padding-top: 30px
-    z-index: 10
-    color: white
+    background-color: white
 
 .menu
     display: flex
