--- a/css/style.css
+++ b/css/style.css
@@ -426,6 +426,25 @@ a {
       flex-basis: 50%;
 }
 
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-size: 14px;
+  font-weight: 300px;
+}
+
+body {
+  font-family: 'Futura Book', sans-serif;
+  font-size: 1rem;
+}
+
+img {
+  max-width: 100%;
+}
+
 .header {
   position: fixed;
   left: 0;
@@ -780,5 +799,103 @@ a {
 
 .swiper-button-next::after {
   display: none;
+}
+
+.stages__div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.stages__title {
+  margin: 0;
+  margin-top: 45px;
+  margin-bottom: 29px;
+  font-size: 36px;
+}
+
+.stages__txt {
+  margin: 0;
+  font-size: 24px;
+  margin-top: 31px;
+  margin-bottom: 19px;
+}
+
+.stages__txt-last {
+  margin-bottom: 89px;
+}
+
+.stages__txt-big {
+  text-align: center;
+  max-width: 348px;
+  width: 100%;
+  font-size: 16px;
+  margin-bottom: 21px;
+}
+
+.stages__video {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 945px;
+  height: 387px;
+  background: url("../img/webp/woman_bg.webp") center no-repeat;
+}
+
+.stages__img {
+  position: relative;
+  margin: auto;
+}
+
+.rectangle {
+  width: 2px;
+  height: 47px;
+  background: #eaf1f7;
+}
+
+.real__div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-bottom: 120px;
+  border-bottom: 1px solid #eaf1f7;
+}
+
+.real__title {
+  margin: 0;
+  margin-top: 77px;
+  font-size: 24px;
+  text-align: center;
+}
+
+.real__txt {
+  margin: 0;
+  margin-top: 30px;
+  margin-bottom: 45px;
+  max-width: 563px;
+  width: 100%;
+  font-size: 16px;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
