--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -7,8 +7,13 @@
     display: flex
     align-items: flex-start
     justify-content: space-between
+    &-mini
+        padding-top: 66px
+        padding-bottom: 140px
+        border-bottom: 1px solid #eaf1f7
+   
 .col
     &-25
-        flex-basis: 25%
+        width: 25%
     &-50
-        flex-basis: 50%
+        width: 50%
