--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,6 +1,7 @@
 a
     text-decoration: none
 .title
+    margin: 0
     color: $dark
     font-family: 'Roboto'
     font-weight: normal
@@ -22,6 +23,7 @@ a
         border: 1px solid rgba(8, 66, 183, 1)
         padding: 14px 39px
 .txt
+    margin: 0
     color: $dark
     font-family: 'Roboto'
     font-weight: normal
