--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,3 +10,5 @@
 @import 'templates/learn'
 @import 'templates/phone'
 @import 'templates/stages'
+@import 'templates/training'
+@import 'templates/process'
