--- a/sass/templates/_info.sass
+++ b/sass/templates/_info.sass
@@ -22,6 +22,11 @@
         &-txt
             max-width: 212px
             width: 100%
+            margin-top: 31px
+            line-height: 1.2
+            &-25
+                margin-top: 31px
+                line-height: 1.2
     &__title
         &-25
             max-width: 189px
@@ -29,6 +34,11 @@
             margin: 0
             margin-top: 74px
             font-size: 24px
+
+    &__txt
+        &-25
+            margin-top: 30px
+            line-height: 1.2
 .magnifier
     margin-top: 265px
     margin-right: 26px
