--- a/sass/templates/_training.sass
+++ b/sass/templates/_training.sass
@@ -10,6 +10,9 @@
         padding-left: 47px
         padding-top: 182px
         padding-bottom: 43px
+        &-mini
+            // &-cloud
+            //     margin-top: 8px
         &-graph
             background: url('../img/webp/graph_bg.webp') center no-repeat
         &-men
@@ -24,7 +27,6 @@
                 margin-top: 47px
                 margin-bottom: 32px
                 font-size: 24px
-
         &-txt
             color: white
             max-width: 193px
@@ -47,3 +49,8 @@
                 &-headphones
                     max-width: 259px
                     width: 100%
+
+.cloud
+    padding-top: 8px
+.headphones
+    padding-top: 10px
