--- a/css/style.css
+++ b/css/style.css
@@ -424,6 +424,10 @@ a {
   border-bottom: 1px solid #eaf1f7;
 }
 
+.col-30 {
+  width: 30%;
+}
+
 .col-25 {
   width: 25%;
 }
@@ -632,6 +636,13 @@ img {
 .info__percent-txt {
   max-width: 212px;
   width: 100%;
+  margin-top: 31px;
+  line-height: 1.2;
+}
+
+.info__percent-txt-25 {
+  margin-top: 31px;
+  line-height: 1.2;
 }
 
 .info__title-25 {
@@ -640,6 +651,11 @@ img {
   margin: 0;
   margin-top: 74px;
   font-size: 24px;
+}
+
+.info__txt-25 {
+  margin-top: 30px;
+  line-height: 1.2;
 }
 
 .magnifier {
@@ -652,50 +668,120 @@ img {
 }
 
 .make {
+  background: url("../img/webp/wave.webp") no-repeat bottom center;
   margin-top: 111px;
+  padding-bottom: 120px;
+}
+
+.make .col__title {
+  margin-right: 135px;
 }
 
 .make__title {
-  margin: 0;
-  margin-bottom: 29px;
+  margin: auto;
   text-align: center;
-  font-size: 36px;
-  line-height: 42px;
+  max-width: 500px;
+  width: 100%;
+  color: #0F1C2E;
+  margin-bottom: 64px;
 }
 
-.make__txt {
+.make__title__heading {
+  font-size: 33px;
+  line-height: 1.30;
+  margin-bottom: 24px;
+}
+
+.make__title__discription {
+  line-height: 1.30;
   margin: auto;
-  margin-bottom: 64px;
-  text-align: center;
-  max-width: 354px;
+  max-width: 370px;
   width: 100%;
   font-size: 16px;
 }
 
-.make__col-title {
+.make__calc__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.make__calc__container__titles {
   max-width: 255px;
   width: 100%;
+  font-size: 19px;
+  line-height: 1.30;
+}
+
+.make__calc__container__heading {
+  font-weight: normal;
   margin: 0;
-  font-size: 20px;
-  line-height: 1.2;
 }
 
-.make__col-txt {
-  max-width: 176px;
+.make__calc-data {
+  max-width: 328px;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 2.5rem;
+  margin-bottom: 2.5rem;
+  border-bottom: 1px solid #eaf1f7;
 }
 
-.make__number__label {
-  max-width: 197px;
-  width: 100%;
+.make__calc-data__text {
   font-size: 16px;
+  font-weight: lighter;
+  line-height: 1.30;
 }
 
-.make__number__input {
-  max-width: 55px;
+.make__calc-data__smaller {
+  padding-left: 62px;
+  max-width: 337px;
   width: 100%;
-  max-height: 48px;
-  height: 100%;
+}
+
+.make__calc-data:last-of-type {
+  margin-bottom: 0;
+}
+
+.make__calc-data__input {
+  width: 98px;
+  height: 48px;
+  text-indent: 20px;
+  border: 1px solid #cfdeee;
+  border-radius: 5px;
+  margin-right: 2.3571rem;
+}
+
+.make .no-border {
+  border: none;
+}
+
+.make-button__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 32px;
+}
+
+.make__button {
+  padding: 18px 27px 15px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 17px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #0842b7;
+  color: white;
 }
 
 .learn {
@@ -980,6 +1066,14 @@ img {
   width: 100%;
 }
 
+.cloud {
+  padding-top: 8px;
+}
+
+.headphones {
+  padding-top: 10px;
+}
+
 .process {
   background: url("../img/webp/process_bg.webp") center bottom repeat-x;
   padding-top: 112px;
@@ -1017,5 +1111,162 @@ img {
 .month {
   max-width: 166px;
   width: 100%;
+}
+
+.lessons {
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(-114%, #03256c), color-stop(215%, #061826));
+  background: linear-gradient(0deg, #03256c -114%, #061826 215%);
+  color: white;
+  padding-top: 111px;
+  padding-bottom: 120px;
+}
+
+.lessons__title {
+  font-size: 36px;
+  color: white;
+}
+
+.lessons__buttons {
+  margin-top: 106px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.lessons__button {
+  padding: 16px 52px;
+}
+
+.lessons__button__sec {
+  color: #fff;
+  border: 1px solid #fff;
+  margin-right: 30px;
+}
+
+.study__txt {
+  color: #68799a;
+  max-width: 411px;
+  width: 100%;
+  margin-left: 22px;
+  font-size: 16px;
+}
+
+.study__ol {
+  -webkit-padding-start: 22px;
+          padding-inline-start: 22px;
+  -webkit-padding-end: 16px;
+          padding-inline-end: 16px;
+}
+
+.study__li {
+  color: white;
+  max-width: 393px;
+  width: 100%;
+  font-size: 23px;
+  font-weight: normal;
+  margin-bottom: 25px;
+}
+
+.study__li:last-child {
+  margin-bottom: 55px;
+}
+
+.study__li::marker {
+  font-size: 16px;
+  color: #68799A;
+}
+
+.study__title {
+  color: white;
+  margin-top: 74px;
+  margin-bottom: 37px;
+  font-size: 30px;
+}
+
+.homework {
+  padding-bottom: 54px;
+  border-bottom: 1px solid #26556c;
+}
+
+.homework__txt {
+  color: white;
+}
+
+.homework__ol {
+  -webkit-padding-start: 22px;
+          padding-inline-start: 22px;
+  -webkit-padding-end: 16px;
+          padding-inline-end: 16px;
+}
+
+.homework__li {
+  color: white;
+  font-size: 19px;
+  line-height: 24px;
+}
+
+.homework__li::marker {
+  font-size: 16px;
+  color: #68799A;
+}
+
+.homework__title {
+  color: white;
+  margin-top: 74px;
+  margin-bottom: 37px;
+  font-size: 30px;
+}
+
+.giftwithtxt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  vertical-align: center;
+  margin-top: 28px;
+}
+
+.gift {
+  padding-top: 79px;
+}
+
+.gift__img {
+  position: relative;
+}
+
+.gift__txt {
+  max-width: 330px;
+  width: 100%;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 300;
+  color: #68799a;
+  margin-left: 30px;
+}
+
+.gift__title {
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.swipe-first {
+  top: 635px;
+  left: 0;
+  background: url("../img/webp/arro.webp");
+  opacity: 0.3;
+  -webkit-transform: rotate(deg);
+  transform: rotate(180deg);
+}
+
+.swipe-first:hover {
+  opacity: 1;
+}
+
+.swipe-second {
+  top: 635px;
+  right: 2px;
 }
 /*# sourceMappingURL=style.css.map */
