--- a/sass/templates/_phone.sass
+++ b/sass/templates/_phone.sass
@@ -35,19 +35,22 @@
         
     &-button
         &-prev
-            background: url('../img/webp/prev.webp') center no-repeat
-            width: 52px
-            height: 16px
-            left: 590px
-            top: 150px
             &::after
                 display: none
         &-next
-            background: url('../img/webp/next.webp') center no-repeat
-            width: 52px
-            height: 16px
-            left: 1262px
-            top: 150px
             &::after
                 display: none
-           
+.swiper
+    &-five
+        background: url('../img/webp/prev.webp') center no-repeat
+        width: 52px
+        height: 16px
+        left: 590px
+        top: 150px
+    &-six
+        background: url('../img/webp/next.webp') center no-repeat
+        width: 52px
+        height: 16px
+        left: 1262px
+        top: 150px
+    
