пхп добавила но без валидации она довела меня дос лез

--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -6,6 +6,7 @@ a
     font-family: 'Roboto'
     font-weight: normal
 .button
+    cursor: pointer
     font-family: 'Roboto'
     text-transform: uppercase
     font-weight: bold
@@ -41,4 +42,5 @@ a
         font-size: 35px
         padding: 19px
         background-color: white
-
+.invalid
+    
