--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -13,9 +13,11 @@
         border-bottom: 1px solid #eaf1f7
    
 .col
+    &-29
+        flex-basis: 29%
     &-30
-        width: 30%
+        flex-basis: 30%
     &-25
-        width: 25%
+        flex-basis: 25%
     &-50
-        width: 50%
+        flex-basis: 50%
