--- a/sass/templates/_free-lessons.sass
+++ b/sass/templates/_free-lessons.sass
@@ -40,8 +40,13 @@
         border: none
         border-radius: 5px
         margin-bottom: 24px
+        color: black
         &:last-child
             margin-bottom: 0
+        &-inside
+            max-width: 359px
+            width: 100%
+            margin-bottom: 24px
         &__button
             padding-left: 104px
             padding-right: 104px
