--- a/sass/templates/_lessons.sass
+++ b/sass/templates/_lessons.sass
@@ -90,9 +90,11 @@
         font-weight: bold
 .swipe
     &-first
-        top: 668px
+        top: 783px
         left: 0
-        background: url('../img/webp/arro.webp') 
+        background: url('../img/webp/arro.webp') no-repeat
+        width: 52px
+        height: 16px
         opacity: 0.3
         -webkit-transform: rotate(deg)
         -moz-transform: rotate(180deg)
@@ -102,9 +104,11 @@
         &:hover
             opacity: 1
     &-second
-        top: 668px
+        top: 783px
         left: 1088px
-        background: url('../img/webp/arro.webp') 
+        width: 52px
+        height: 16px
+        background: url('../img/webp/arro.webp') no-repeat
         opacity: 0.3
         &:hover
             opacity: 1
