--- a/sass/templates/_questions.sass
+++ b/sass/templates/_questions.sass
@@ -17,6 +17,7 @@
     &__form__container
         display: flex
         justify-content: space-between
+        align-items: flex-start
     &__input
         max-width: 263px
         width: 100%
@@ -26,4 +27,10 @@
         outline: none
         border: none
         border-radius: 5px
+        color: black
+        margin-bottom: 10px
+        &-inside
+            max-width: 263px
+            width: 100%
+            
        
