--- a/sass/templates/_results.sass
+++ b/sass/templates/_results.sass
@@ -17,6 +17,7 @@
         max-width: 260px
         width: 100%
         line-height: 20px
+    &__columns
     &__columns__examples
         display: flex
         justify-content: space-between
@@ -25,6 +26,9 @@
     &__example
         max-width: 262px
         width: 100%
+        transition: .3s
+        &:hover
+            transform: scale(1.2)
         &__title
             margin-top: 44px
             margin-bottom: 31px
