--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -12,17 +12,20 @@ a
     font-weight: bold
     font-size: 16px
     border-radius: 5px
+    transition: .3s
+    &:hover
+        transform: scale(1.2)
     &__primary
         background-color: rgba(8, 66, 183, 1)
         color: white
         border: none
-        padding: 15px 45px
+        padding: 17px 45px
         box-shadow: 
     &__secondary
         background-color: transparent
         color: rgba(8, 66, 183, 1)
         border: 1px solid rgba(8, 66, 183, 1)
-        padding: 14px 39px
+        padding: 16px 39px
 .txt
     margin: 0
     color: $dark
@@ -42,5 +45,7 @@ a
         font-size: 35px
         padding: 19px
         background-color: white
-.invalid
-    
+.invalid-block
+    // text-shadow: 1px 1px 2px black, 0 0 1em white
+    color: white
+   
