--- a/sass/templates/_price.sass
+++ b/sass/templates/_price.sass
@@ -19,6 +19,9 @@
         flex-direction: column
         justify-content: center
         align-items: center
+        transition: .3s
+        &:hover
+            transform: scale(1.2)
         &-txt
             max-width: 216px
             text-align: center
